Closed Bug 1691167 Opened 5 years ago Closed 5 years ago

"warning: 'context' is deprecated" in various places

Categories

(Core :: Widget: Cocoa, defect, P5)

All
macOS
defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

 8:53.20 /Users/mstange/code/mozilla/widget/cocoa/TextInputHandler.mm:2159:66: warning: 'context' is deprecated: first deprecated in macOS 10.12 - This method always returns nil. If you need access to the current drawing context, use [NSGraphicsContext currentContext] inside of a draw operation. [-Wdeprecated-declarations]
 8:53.20                                            context:[aNativeEvent context]
 8:53.20                                                                  ^
 8:53.20 /Users/mstange/SDKs/MacOSX10.12.sdk/System/Library/Frameworks/AppKit.framework/Headers/NSEvent.h:414:59: note: property 'context' is declared deprecated here
 8:53.20 @property (nullable, readonly, strong) NSGraphicsContext *context NS_DEPRECATED_MAC(10_0, 10_12, "This method always returns nil. If you need access to the current drawing context, use [NSGraphicsContext currentContext] inside of a draw operation.");
 8:53.72                                                           ^
 8:53.72 /Users/mstange/SDKs/MacOSX10.12.sdk/System/Library/Frameworks/AppKit.framework/Headers/NSEvent.h:414:59: note: 'context' has been explicitly marked deprecated here
Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/dcfa1efdc120 Stop accessing the deprecated 'context' property on NSEvent, it's always nil. r=spohl
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: