Bug 1691167 - Stop accessing the deprecated 'context' property on NSEvent, it's always nil. r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D104299